--- a/media/Makefile.in
+++ b/media/Makefile.in
@@ -4,6 +4,7 @@ TARGET_GREEN=green.xbt
 TARGET_ORANGE=orange.xbt
 TARGET_PINK=pink.xbt
 TARGET_MAROON=maroon.xbt
+TARGET_CHARCOAL=charcoal.xbt
 
 all: TEXTURES
 
@@ -16,6 +17,7 @@ TEXTURES:
 	@TEXTUREPACKER@ -dupecheck -input ../themes/orange -output $(TARGET_ORANGE)
 	@TEXTUREPACKER@ -dupecheck -input ../themes/pink -output $(TARGET_PINK)
 	@TEXTUREPACKER@ -dupecheck -input ../themes/maroon -output $(TARGET_MAROON)
+	@TEXTUREPACKER@ -dupecheck -input ../themes/charcoal -output $(TARGET_CHARCOAL)
 
 clean:
 	rm -f $(TARGET)
@@ -24,5 +26,6 @@ clean:
 	rm -f $(TARGET_ORANGE)
 	rm -f $(TARGET_PINK)
 	rm -f $(TARGET_MAROON)
+	rm -f $(TARGET_CHARCOAL)
 
 distclean: clean
